# jai

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  NEWS  README.md  complete.cc  configure.ac  cred.cc  cred.h  default_conf.cc  defer.h  err.h  fs.cc  fs.h  jai.1.md  jai.cc  jai.h  options.h
